--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
             background-size: cover;
             background-position: top center;
             z-index: -1; /* put it behind the calculator */
+            background-repeat: no-repeat;
+            background-size: 100% 100%;
+            min-height: 100vh;
         }
 
         /* add some fun flair with a random background image on load */
