--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
         }
 
         .background-image {
-            position: absolute;
+            position: fixed;
             top: 0;
             left: 50%;
             width: 50%;
-            height: 50%;
+            height: 100%;
             background-size: cover;
             background-position: top center;
             z-index: -1; /* put it behind the calculator */
