--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
         text-align: left;
         color: #FFFFFF;
         font-family: 'Karla', sans-serif;
-    
         }
         
         .calculator-container {
@@ -51,9 +50,10 @@
             top: 0;
             left: 50%;
             width: 50%;
+	    height:75%;
             background-size: cover;
             background-position: top center;
-            z-index: -1; /* put it behind the calculator */
+
             background-repeat: no-repeat;
             background-size: 100% 45%;
             min-height: 33vh;
