--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>VanKek moon maths</title>
     <style type="text/css">
-        p, label * {
+        p, label *, label {
         text-align: left;
         color: #FFFFFF;
         font-family: 'Karla', sans-serif;
@@ -58,6 +58,13 @@
             background-size: 100% 45%;
             min-height: 33vh;
             }
+
+	    p, label *, label {
+        	text-align: left;
+        	color: #FFFFFF;
+       		font-family: 'Karla', sans-serif;
+		font-size:10px;
+       	     }
         }
 
         /* add some fun flair with a random background image on load */
