--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>VanKek moon maths</title>
     <style type="text/css">
-        p, label *, label {
+        div.inputs, p, label *, label#text {
         text-align: left;
         color: #FFFFFF;
         font-family: 'Karla', sans-serif;
@@ -59,7 +59,7 @@
             min-height: 33vh;
             }
 
-	    p, label *, label {
+	    div.inputs, p, label *, label {
         	text-align: left;
         	color: #FFFFFF;
        		font-family: 'Karla', sans-serif;
