--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
         color: #FFFFFF;
         font-family: 'Karla', sans-serif;
         }
+
+	span#expected-label, span#current-value {
+	font-weight: 700;
+	}
         
         .calculator-container {
             display: flex;
