--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         }
 
 	span#expected-label, span#current-value {
-	font-weight: 700;
+	font-weight: bold;
 	}
         
         .calculator-container {
